--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                 <li>исполнительный</li>
             </ul>
         <hr>
-            <p>Мой принцип работы - будь компетентен!</p>
+            <h2>Мой принцип работы</h2>
+            <p>"Будь компетентен!"</p>
         <hr>
             <h2>Личное</h2>
             <p>Люблю природу и прогулки, тайны и загадки и вселенную Marvel</p>
@@ -63,6 +64,7 @@
             <img src="" alt="picture_3">
 
             <hr>
+            <h2>Контакт</h2>
             <form action="">
                 <input type="text" name="" id="">
             </form>
