--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
      <div>
         <div class="purple">
             <div class="block1">
-                <p><span class="bold-text cyan-text">НИКИТА СКОРОДУМОВ</span></p>
                 <ul class="cyan-text nav">
+                    <li><span class="bold-text cyan-text name-tag">НИКИТА <br>СКОРОДУМОВ</span></li>
                     <li>Опыт работы</li>
                     <li>Достижения</li>
                     <li>Сильные стороны</li>
@@ -19,15 +19,14 @@
                     <li>Контакты</li>
                 </ul>
 
-                <img src="./img/main.png" alt="Моё фото" width="900px">
-                <p class="white-text">
+                <img src="./img/main.png" alt="Моё фото" class="logo-img">
+                <p class="white-text paragraph">
                     Начинающий веб - разработчик. Сфера веба мне крайне интересна и я развиваюсь в этом направлении. Сейчас работаю преподавателем в Beauty-индустрии, но мечатю сменить направление работы.
                 </p>
                 <h1 class="white-text">Начинающий веб-разработчик.</h1>
             </div>
 
         </div>
-        <hr>
         <div class="block1">
             <h2>Опыт работы</h2>
                 <ol class="exp">
@@ -36,18 +35,16 @@
                 </ol>
         </div>
 
-        <hr>
         <div class="block1">
             <h2>Мои самые большие достижения</h2>
             <p>Главные профессиональные достижения за последние годы</p>
             <ul class="achievements bold-text">
-                <li>Три раза победил в номинации лучший технолог года</li>
-                <li>Веду 6 курсов по повышению квалификации</li>
-                <li>Стал преподавателем профессионального образования</li>
+                <li><span class="bold-text">Три раза победил в номинации лучший технолог года</span></li>
+                <li><span class="bold-text">Веду 6 курсов по повышению квалификации</span></li>
+                <li><span class="bold-text">Стал преподавателем профессионального образования</span></li>
             </ul>
         </div>
 
-        <hr>
         <div class="block1">
             <h2>Мои сильные стороны</h2>
             <ul class="str-points bold-text">
@@ -62,18 +59,16 @@
             </ul>
         </div>
 
-        <hr>
-        <div class="purple">
+        <div class="hands-bg">
             <div class="block1">
                 <h2 class="white-text">Мой принцип работы</h2>
                 <p class="white-text"><i>"Будь компетентен!"</i></p>
             </div>
         </div>
 
-        <hr>
         <div class="block1">
             <h2>Личное</h2>
-            <p>Люблю природу и прогулки, тайны и загадки и вселенную Marvel</p>
+            <p class="paragraph">Люблю природу и прогулки, тайны и загадки и вселенную Marvel</p>
 
             <div class="interests-img img-1"></div>
             <div class="interests-img img-2"></div>
