--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <div>
         <div class="purple">
             <div class="block1">
-                <ul class="cyan-text nav">
+                <ul class="cyan-text nav" style="padding-top: 20px;">
                     <li><span class="bold-text cyan-text name-tag">НИКИТА <br>СКОРОДУМОВ</span></li>
                     <li>Опыт работы</li>
                     <li>Достижения</li>
@@ -35,7 +35,7 @@
                 </ol>
         </div>
 
-        <div class="block1">
+        <div class="block1 no-padding-top">
             <h2>Мои самые большие достижения</h2>
             <p>Главные профессиональные достижения за последние годы</p>
             <ul class="achievements bold-text">
@@ -45,7 +45,7 @@
             </ul>
         </div>
 
-        <div class="block1">
+        <div class="block1 no-padding-top">
             <h2>Мои сильные стороны</h2>
             <ul class="str-points bold-text">
                 <li>усидчивый</li>
@@ -69,14 +69,15 @@
         <div class="block1">
             <h2>Личное</h2>
             <p class="paragraph">Люблю природу и прогулки, тайны и загадки и вселенную Marvel</p>
+            <div class="img-container">
+                <img class="interests-img img-1">
+                <img class="interests-img img-2">
+                <img class="interests-img img-3">
+            </div>
 
-            <div class="interests-img img-1"></div>
-            <div class="interests-img img-2"></div>
-            <div class="interests-img img-3"></div>
         </div>
 
 
-            <hr>
         <div class="block1">
             <h2>Контакт</h2>
             <form action="">
