--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
                     <li><a href="#contacts">Контакты</a></li>
                 </ul>
 
-                <img src="./img/main.png" alt="Моё фото" class="logo-img">
-                <p class="white-text paragraph">
-                    Начинающий веб - разработчик. Сфера веба мне крайне интересна и я развиваюсь в этом направлении. Сейчас работаю преподавателем в Beauty-индустрии, но мечатю сменить направление работы.
+                <!-- <img src="./img/main.png" alt="Моё фото" class="logo-img"> -->
+
+                <div class="logo-container"></div>
+
+                <p class="white-text paragraph text-overlap">
+                    Начинающий веб - разработчик. <br>Сфера веба мне крайне интересна и я развиваюсь в этом направлении/
                 </p>
-                <h1 class="white-text">Начинающий веб-разработчик.</h1>
+                <h1 class="white-text">Начинающий веб-разработчик</h1>
             </div>
 
         </div>
